# humming

./: .clang-format  pyproject.toml
benchmarks/: bench_humming.py  bench_marlin.py  bench_torch_w16a16.py
humming/: __init__.py  dtypes.py  layer.py
humming/csrc/: nvrtc_compile.cpp
humming/csrc/launcher/: elf.h  launcher.cpp  tensor.h  tma.h  utils.h
humming/include/humming/: scheduler.cuh
humming/include/humming/arith/: epilogue_arith.cuh  mainloop_arith.cuh
humming/include/humming/datatype/: dequant_fused.cuh
humming/include/humming/epilogue/: gmem_writer.cuh  pipeline.cuh  smem_reducer.cuh  smem_writer.cuh
humming/include/humming/kernel/: hadamard.cuh  hadamard_quant.cuh  hadamard_quant_wide.cuh  humming.cuh  humming_ws.cuh  pack_weight.cuh  process_mxfp4.cuh  tops_bench.cuh
humming/include/humming/memory/: g2s_pipeline.cuh  s2r_pipeline.cuh
humming/include/humming/memory/g2s_loader/: loader_a.cuh  loader_as.cuh  loader_b.cuh  loader_bias.cuh  loader_bs.cuh  (+1 more)
humming/include/humming/mma/: all.cuh  wgmma.cuh  wmma.cuh
humming/include/humming/utils/: all.cuh  context.cuh  storage.cuh
humming/jit/: compiler.py
humming/kernel/: humming.py  pack_weight.py  unpack_weight.py
humming/ops/: __init__.py  input.py  moe.py  utils.py  weight.py
humming/schema/: __init__.py  autoround.py  compressed_tensors.py  gptq.py  humming.py  modelopt.py
humming/tune/: base.py  sm75.py  sm8x.py  sm90.py  sm90_h20.py
humming/utils/: device.py  jit.py  nvrtc.py  smem.py  test.py  weight.py
tests/: test_indexed_batch_invariance.py  test_moe.py  test_scale.py
(+8 files in other folders)
